--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -13,14 +14,27 @@
         android:textAlignment="center"
         android:textStyle="bold"/>
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/user_email"
-        android:layout_marginTop="20dp"
-        android:hint="Enter Email"
-        android:padding="10dp"
-        android:inputType="textEmailAddress"/>
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:hint="Email"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:boxStrokeColor="@color/colorAccent"
+        app:hintTextColor="@color/colorAccent">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_email"
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            android:inputType="textEmailAddress"
+            android:drawableLeft="@drawable/ic_baseline_email_24"
+            android:drawablePadding="5dp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
         android:layout_width="match_parent"
@@ -28,7 +42,10 @@
         android:id="@+id/user_password"
         android:hint="Enter Password"
         android:padding="10dp"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawablePadding="5dp"
+        android:background="@drawable/edittext"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -43,7 +60,8 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:id="@+id/login_user"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        style="@style/Widget.MaterialComponents.Button"/>
 
     <TextView
         android:layout_width="match_parent"
